setup the database
